Fix alignment, dropdown no hoover and spacing

--- a/src/sass/BorderRow.scss
+++ b/src/sass/BorderRow.scss
@@ -8,7 +8,6 @@
   display: flex;
   flex-direction: row;  
   justify-content: space-evenly;
-  z-index: -1
 }
 
 .row-input {
